# iot-botnet-img-recognition

./: .gitignore  Model.py  README.md  RQ1.py  RQ2.py  RQ3.py  RQ4.py  eda.ipynb  extract_image.py  pyproject.toml
result/: RQ1.txt  RQ2.txt  RQ3.txt
result/RQ4/: ARM.txt  Intel 80386.txt  MIPS.txt  PowerPC or cisco 4500.txt
